Change UI Color

--- a/app/src/main/res/layout/activity_history_detail.xml
+++ b/app/src/main/res/layout/activity_history_detail.xml
@@ -17,35 +17,40 @@
             android:layout_height="400dp"
             android:layout_margin="16dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_place_holder"/>
+            app:srcCompat="@drawable/ic_place_holder"
+            android:background="@color/whiteCalm"/>
 
         <TextView
             android:id="@+id/tvId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            tools:text="ID : XX" />
+            tools:text="ID : XX"
+            android:textColor="@color/primary"/>
 
         <TextView
             android:id="@+id/tvLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            tools:text="Predict : label" />
+            tools:text="Predict : label"
+            android:textColor="@color/primary"/>
 
         <TextView
             android:id="@+id/tvScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            tools:text="Confident Score : 0.899" />
+            tools:text="Confident Score : 0.899"
+            android:textColor="@color/primary"/>
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            tools:text="CreatedAt : 20/04/2024" />
+            tools:text="CreatedAt : 20/04/2024"
+            android:textColor="@color/primary"/>
 
     </LinearLayout>
 </ScrollView>
