--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -17,14 +17,16 @@
             android:layout_height="400dp"
             android:layout_margin="16dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_place_holder"/>
+            app:srcCompat="@drawable/ic_place_holder"
+            android:background="@color/whiteCalm"/>
 
         <TextView
             android:id="@+id/result_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:text="@string/result" />
+            android:text="@string/result"
+            android:textColor="@color/primary"/>
 
     </LinearLayout>
 </ScrollView>
