--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#FF6F00</color>
+    <color name="secondary">#616161</color>
+    <color name="red">#CB0A0F</color>
+    <color name="whiteCalm">#e6e6e6</color>
 </resources>
