--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
                 android:layout_height="50dp"
                 android:layout_marginEnd="16dp"
                 android:clickable="true"
-                android:contentDescription="Button to history activity"
+                android:focusable="true"
+                android:contentDescription="@string/button_to_history_activity"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/toolbar"
                 app:layout_constraintTop_toTopOf="parent"
@@ -49,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="Articles"
+                android:text="@string/articles"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/secondary"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +85,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        app:srcCompat="@drawable/ic_place_holder" />
+        app:srcCompat="@drawable/ic_place_holder"
+        android:contentDescription="@string/picture_holder"/>
 
     <Button
         android:id="@+id/galleryButton"
