--- a/app/src/main/res/layout/activity_prediction_history.xml
+++ b/app/src/main/res/layout/activity_prediction_history.xml
@@ -41,15 +41,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_back"
-                app:tint="@color/white" />
+                app:tint="@color/white"
+                android:contentDescription="@string/back_button"/>
 
             <TextView
                 android:id="@+id/ivTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Prediction History"
-                android:textSize="18dp"
+                android:text="@string/prediction_history"
+                android:textSize="18sp"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivBack"
@@ -80,7 +81,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Message"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"
