--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="@string/cancer_articles"
+                android:text="@string/tech_articles"
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
